wflow_publish(c("analysis/exploreArrayBias450.Rmd", "analysis/exploreArrayBiasEPIC.Rmd",     "analysis/exploreData.Rmd", "analysis/expressionGenesets.Rmd",     "analysis/fdrAnalysis.Rmd", "analysis/regionAnalysis.Rmd"))

--- a/analysis/expressionGenesets.Rmd
+++ b/analysis/expressionGenesets.Rmd
@@ -86,7 +86,7 @@ Genes that do not have an adequate number of reads in any sample should be filte
 Filter out lowly expressed genes and calculate TMM normalisation factors.
 
 ```{r}
-keep <- filterByExpr(z, group = z$group)
+keep <- filterByExpr(z, group = z$samples$group)
 x <- z[keep, ]
 y <- calcNormFactors(x)
 y
