--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -6,12 +6,14 @@ output:
     toc: false
 ---
 
-# Gene set testing for methylation arrays
+Unbiased gene set enrichment analysis for genome-wide DNA methylation data
+--------------------------------------------------------------------------
 
-This site contains the development and evaluation of various methylation array 
-gene set testing methods available in the Bioconductor [missMethyl package](https://bioconductor.org/packages/release/bioc/html/missMethyl.html). 
-Follow the links below to explore the 
-different parts of the project. 
+This site contains the results of the analysis presented in 
+*“Unbiased gene set enrichment analysis for genome-wide DNA methylation data”*. 
+Follow the links below to see the different parts of the analysis. For details
+on how to reproduce the complete analyis, please see the [Getting started](start)
+guide.
 
 
 Analysis
@@ -63,5 +65,6 @@ content on this website is covered by a [Creative Commons CC-BY][cc] license.
 Citations
 ---------
 
+[start]: gettingStarted.html "Getting started"
 [mit]: https://choosealicense.com/licenses/mit/ "MIT License"
 [cc]: https://creativecommons.org/licenses/by/4.0/ "CC-BY License"
