--- a/analysis/exploreArrayBias450.Rmd
+++ b/analysis/exploreArrayBias450.Rmd
@@ -72,6 +72,8 @@ p <- ggplot(dat, aes(x=Var1, y=Freq)) +
 p
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/SFig-1A.rds")
 saveRDS(p, fig, compress = FALSE)
@@ -107,6 +109,8 @@ p <- a + b + c + plot_layout(widths = c(1,2,6)) +
 p
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/SFig-1B.rds")
 saveRDS(p, fig, compress = FALSE)
@@ -139,14 +143,16 @@ p
 
 ## Null simulations
 
-Null simulation strategy: randomly select 50, 100, 500, 1000, 5000 and 10000 sets of CpGs and perform GO testing on each set 100 times, with and without adjusting for the various biases on the array. 
+We randomly select 50, 100, 500, 1000, 5000 and 10000 sets of CpGs and perform GO testing on each set 100 times, with and without adjusting for the various biases on the array. 
 
-The code used for the simulation can be found in `r here("code/randCpgSim.R")`.   
+The code used to produce the simulation results can be found in the `code/random-cpg-sims` directory. It consists of three scripts: `genRandCpgSimJobs.R`, `randomCpgSim.R` and `processRandCpgSim.R`. The `genRandCpgSimJobs.R` script creates and submits [Slurm](https://slurm.schedmd.com/overview.html) job scripts that run the `randomCpgSim.R` script, in parallel, on a HPC. Each job executes *one* of the 100 simulations, for a fixed number of randomly selected CpGs, using either the 450K or EPIC array annotation. The results of each job are saved as an RDS file named `{arrayType}.{noCpgs}.{simNo}.rds` in the `output/random-cpg-sims` directory. Once all simulation jobs are complete, the `processRandCpgSim.R` must be executed to collate the results into a single object for each array type, which are then saved as `450K.rds` and `EPIC.rds` in the `output/random-cpg-sims` directory. The intermediate RDS files are moved into `output/.bin`, which can then be deleted, if no longer required. The subsequent section requires `450K.rds` to be present in the `output/random-cpg-sims` directory for downstream analysis and plotting.             
+
+### Results  
 
 The following boxplots show what proportion of the 100 simulations, at each level of CpGs sampled, had a raw p-value less than 0.05. This gives us an idea of the false discovery rate with and without adjustment for the number of CpGs annotated to a gene.
 
 ```{r}
-dat <- readRDS(here("output/random-cpg-sims/EPIC.rds"))
+dat <- readRDS(here("output/random-cpg-sims/450K.rds"))
 
 dat %>% filter(method %in% names(dict)) %>%
     mutate(method = unname(dict[method])) %>%
@@ -161,6 +167,8 @@ p <- ggplot(sigDat, aes(x=noCpgs, y=pSig, fill=method)) +
     scale_fill_manual(values = methodCols)
 p
 ```
+
+Save figure for use in manuscript.
 
 ```{r}
 fig <- here("output/figures/SFig-3A.rds")
@@ -216,6 +224,8 @@ p <- ggplot(medAvgDat, aes(x=noCpgs, y=medAvgFreq, fill=method)) +
     scale_fill_manual(values = methodCols)
 p
 ```
+
+Save figure for use in manuscript.
 
 ```{r}
 fig <- here("output/figures/SFig-3B.rds")
