--- a/analysis/exploreData.Rmd
+++ b/analysis/exploreData.Rmd
@@ -37,7 +37,7 @@ We are using publicly available EPIC data [GSE110554](https://www.ncbi.nlm.nih.g
 
 ```{r}
 # load data
-dataFile <- here("data/GSE110554-data.RData")
+dataFile <- here("data/datasets/GSE110554-data.RData")
 if(file.exists(dataFile)){
     # load processed data and sample information
     load(dataFile)
@@ -87,14 +87,16 @@ p <- ggplot(dat, aes(x = x, y = y, colour = cellType)) +
 p
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/Fig-4A.rds")
 saveRDS(p, fig, compress = FALSE)
 ```
 
-# Statistical analysis
+## Statistical analysis
 
-Compare several sets of sorted immune cells. Consider results significant at FDR < 0.05 and delta beta ~ 10% (~ lfc = 0.5).
+Compare several sets of sorted immune cells. Consider results significant at FDR < 0.05 and delta beta > 10% (~ lfc = 0.5).
 
 ```{r}
 mVals <- getM(fltGr)
@@ -135,54 +137,11 @@ p <- ggplot(bDat, aes(x = avgbias, y = propDM)) +
 p
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/Fig-1B.rds")
 saveRDS(p, fig, compress = FALSE)
-```
-
-How correlated is differential methylation with differential expression for the same contrasts (same cell types but not identical samples)?
-
-```{r, fig.height=6, fig.width=7, warning=FALSE, message=FALSE}
-ann <- loadAnnotation("EPIC")
-flatAnn <- loadFlatAnnotation(ann)
-rfit <- readRDS(here("data/rnaseq-fit.rds"))
-rdat <- rownames_to_column(data.frame(rfit$coefficients), var = "gene_id")
-
-rdat %>% inner_join(data.frame(rfit$genes)) %>%
-    mutate(entrezid = as.character(entrezid)) %>%
-    dplyr::select(-length) -> rdat
-rdat <- reshape2::melt(rdat, value.name = "coefficient")
-
-reshape2::melt(rfit$p.value, value.name = "p.value") %>%
-    group_by(Contrasts) %>%
-    mutate(FDR = p.adjust(p.value, method = "BH")) -> rfdr
-
-rdat %>% inner_join(rfdr, 
-                    by = c("gene_id" = "Var1", "variable" = "Contrasts")) -> rdat
-
-mdat <- rownames_to_column(data.frame(tfit$coefficients), var = "cpg")
-mdat %>% inner_join(flatAnn) %>%
-    dplyr::select(-symbol, -alias) -> mdat
-mdat <- reshape2::melt(mdat, value.name = "coefficient") -> mdat
-
-mdat %>% dplyr::select(-cpg) %>%
-    mutate(promoter = ifelse(group %in% c("TSS1500", "TSS200", "1stExon"), 
-                             "prom", "other")) %>%
-    group_by(variable, entrezid, promoter) %>%
-    #summarise(coef = coefficient[which.max(abs(coefficient))]) -> mdat
-    summarise(coef = median(coefficient)) %>%
-    dplyr::filter(promoter == "prom") -> mdat
-
-mdat %>% inner_join(rdat, by = c("entrezid", "variable")) %>%
-    mutate(colour = ifelse(FDR < 0.05, "Sig.", "Not sig.")) -> dat
-
-ggplot(dat, aes(x = coef, y = coefficient, colour = colour)) +
-    geom_point(data = dat[dat$colour == 'Not sig.',], alpha = 0.25, 
-               size = 1) +
-    geom_point(data = dat[dat$colour == 'Sig.',], size = 0.75, alpha = 0.5) +
-    facet_wrap(vars(variable), ncol = 2, scales = "free") +
-    labs(x = "Median logFC for CpGs in gene promoter", 
-         y = "Gene expression Log FC", color = "Diff. Gene Exp.")
 ```
 
 Examine only the independent contrasts.
@@ -197,22 +156,33 @@ p <- ggplot(dat, aes(x = comp, y = num, fill = dir)) +
     scale_fill_brewer(palette = "Set1", direction = -1)
 p
 ```
+
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/Fig-4B.rds")
 saveRDS(p, fig, compress = FALSE)
 ```
 
-## Compare performance of different gene set testing methods
+# Compare performance of different gene set testing methods
 
-Compare the gene set testing methods available for methylation arrays; hypergeometric test (HGT), gometh (best), methylRRA (GLM), methylRRA (ORA) and methylRRA (GSEA). As methylRRA does not work well with sets that only contain very few genes or very large sets, we will only test sets with at least 5 genes and maximum of 5000 genes.
+We compare the performance of the following gene set testing methods available for methylation arrays: a standard hypergeometric test (HGT), GOmeth from the *missMethyl* package, methylglm (mGLM), methylRRA-ORA (mRRA (ORA)) and methylRRA-GSEA (mRRA (GSEA)) from the *methylGSA* package and ebayGSEA from the *ChAMP* package. 
 
-### Save analysis results
+We perform gene set testing on the results of all three blood cell type comparisons: B-cells vs. NK cells, CD4 T-cells vs. CD8 T-cells and monocytes vs. neutrophils, using all of the different gene set testing methods.
+
+Gene set testing is performed for each comparison using GO categories, KEGG pathways and the BROAD MSigDB gene sets for the following methods: HGT, GOmeth, mGLM, mRRA (ORA) and mRRA (GSEA)
+
+As gene set testing can only be performed using the BROAD MSigDB gene sets provided with the *ChAMP* package, the ebayGSEA method is only tested using the BROAD MSigDB gene sets for the three blood cell comparisons.
+
+Furthermore, as the methylGSA methods do not work well with sets that only contain very few genes or very many genes, we only test sets with at least 5 genes and at most 5000 genes. 
+
+Firstly, the results of the statistical analysis of the three blood cell comparisons are saved as an RDS object.
 
 ```{r}
 minsize <- 5
 maxsize <- 5000
 
-outFile <- here("data/blood.contrasts.rds")
+outFile <- here("data/cache-intermediates/blood.contrasts.rds")
 
 if(!file.exists(outFile)){
   obj <- NULL
@@ -227,7 +197,12 @@ if(!file.exists(outFile)){
 } 
 ```
 
-### Load output for all methods
+As some of the methods take a considerable amount of time to perform the gene set testing analysis, we have created several scripts in order to run the analyses in parallel on a HPC.
+The code used to run all the gene set testing analyses using the different methods can be found in the `code/compare-methods` directory. It consists of four scripts: `genRunMethodJob.R`, `runChAMP.R`, `runMethylGSA.R` and `runMissMethyl.R`. The `genRunMethodJob.R` script creates and submits [Slurm](https://slurm.schedmd.com/overview.html) job scripts that run the `runChAMP.R`, `runMethylGSA.R` and `runMissMethyl.R` scripts, for *each* gene set type, in parallel, on a HPC. The results of each job are saved as an RDS file named `{package}.{set}.rds` in the `output/compare-methods` directory. Once all analysis jobs are complete, all of the suvbsequent analyses in this document can be executed.
+
+## Load output for all methods
+
+The results of all the gene set testing analyses, using all the different methods, for the different types of gene sets, are loaded into a `list` of `data.frames`. All of the `data.frames` in the `list` are then concatenated into a `tibble` for downstream analysis and plotting.
 
 ```{r}
 inFiles <- list.files(here("output/compare-methods"), pattern = "rds", 
@@ -240,22 +215,14 @@ res <- lapply(inFiles, function(file){
 dat <- as_tibble(dplyr::bind_rows(res))
 ```
 
-```{r}
-dat %>% filter(grepl("mmethyl", method)) %>%
-    mutate(method = unname(dict[method])) -> subDat
+## Explore analysis results
+### GO categories
 
-ggplot(subDat, aes(x = pvalue, colour = sub)) +
-    geom_density() +
-    facet_grid(cols = vars(contrast), rows = vars(method)) +
-    labs(colour = "Sig. CpG Selection", x = "P-value", y = "Density") +
-    scale_color_hue(labels = c("Top 5000", "Top 10000", "FDR < 0.01", 
-                                  "FDR < 0.05")) + 
-    theme(legend.position = "bottom", legend.text = element_text(size=6))
-```
-
-## Test GO categories
+Examine the performance of the different methods when gene set testing was performed on GO categories.
 
 ```{r}
+ann <- loadAnnotation("EPIC")
+flatAnn <- loadFlatAnnotation(ann)
 cpgEgGo <- cpgsEgGoFreqs(flatAnn)
 
 cpgEgGo %>% 
@@ -297,11 +264,11 @@ p
 As we are comparing immune cells, we expect GO categories related to the immune system and its processes to be highly ranked. To evalue this, we downloaded all of the child terms for the GO category "immune system process" (GO:002376) from AminGO 2;  [http://amigo.geneontology.org/amigo/term/GO:0002376](http://amigo.geneontology.org/amigo/term/GO:0002376). We also examine results when top ranked 100 GO terms from RNA-seq analysis of the same cell type comparisons is used as "truth".
 
 ```{r}
-immuneGO <- unique(read.csv(here("data/GO-immune-system-process.txt"),
+immuneGO <- unique(read.csv(here("data/genesets/GO-immune-system-process.txt"),
                             stringsAsFactors = FALSE, header = FALSE,
                             col.names = "GOID"))
 
-rnaseqGO <- readRDS(here("data/RNAseq-GO.rds"))
+rnaseqGO <- readRDS(here("data/cache-rnaseq/RNAseq-GO.rds"))
 rnaseqGO %>% group_by(contrast) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> topGOSets
@@ -350,6 +317,8 @@ p[[1]] + ggtitle(sort(unique(dat$contrast))[1])
 p[[2]] + ggtitle(sort(unique(dat$contrast))[2])
 p[[3]] + ggtitle(sort(unique(dat$contrast))[3])
 ```
+
+Save figure for use in manuscript.
 
 ```{r}
 fig <- here("output/figures/Fig-4C.rds")
@@ -430,6 +399,8 @@ shift_legend(p[[2]], plot = TRUE, pos = "left")
 shift_legend(p[[3]], plot = TRUE, pos = "left")
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/Fig-4D.rds")
 saveRDS(shift_legend(p[[1]] + theme(plot.title = element_blank()),
@@ -462,7 +433,9 @@ ggplot(subDat, aes(pvalue, fill = method)) +
     scale_fill_manual(values = methodCols)
 ```
 
-### Compare gometh results using different DM CpG significance cutoffs
+#### Compare GOmeth results using different DM CpG significance cutoffs
+
+As the results of GOmeth depend on the list of significant CpGs provided as input to the function, we explored the effect of selecting "significant" CpGs in different ways on the gene set testing performance of GOmeth.
 
 ```{r, fig.width=7, fig.height=8}
 dat %>% filter(set == "GO") %>%
@@ -510,16 +483,14 @@ p <- ggplot(sub, aes(x = rank, y = csum, colour = cut)) +
 p
 ```
 
-## Test KEGG pathways
+### KEGG pathways
 
 Now test KEGG pathways with at least 5 genes and 5000 at most.
 
-Again, as we are comparing immune cells we expecte pathways from the following categories to be highly ranked: Immune system, Immune disease, Signal transduction, Signaling molecules and interaction; [https://www.genome.jp/kegg/pathway.html](https://www.genome.jp/kegg/pathway.html). 
-
-Examine results when top ranked 100 KEGG pathways from RNA-seq analysis of the same cell type comparisons is used as "truth".
+Again, as we are comparing immune cells we expect pathways from the following categories to be highly ranked: Immune system, Immune disease, Signal transduction, Signaling molecules and interaction; [https://www.genome.jp/kegg/pathway.html](https://www.genome.jp/kegg/pathway.html). 
 
 ```{r}
-immuneKEGG <- read.csv(here("data/kegg-immune-related-pathways.csv"), 
+immuneKEGG <- read.csv(here("data/genesets/kegg-immune-related-pathways.csv"), 
                             stringsAsFactors = FALSE, header = FALSE, 
                             col.names = c("ID","pathway"))
 immuneKEGG$PID <- paste0("path:hsa0",immuneKEGG$ID)
@@ -542,8 +513,10 @@ p1 <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
     scale_color_manual(values = methodCols)
 ```
 
+Examine results when top ranked 100 KEGG pathways from RNA-seq analysis of the same cell type comparisons is used as "truth".
+
 ```{r, fig.height=7, fig.width=9}
-rnaseqKEGG <- readRDS(here("data/RNAseq-KEGG.rds"))
+rnaseqKEGG <- readRDS(here("data/cache-rnaseq/RNAseq-KEGG.rds"))
 rnaseqKEGG %>% group_by(contrast) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> topKEGG
@@ -570,6 +543,8 @@ p3 <- p1 / p2 +
     theme(legend.position = "bottom")
 p3
 ```
+
+Save figure for use in manuscript.
 
 ```{r}
 fig <- here("output/figures/SFig-7A.rds")
@@ -644,6 +619,8 @@ shift_legend(p[[2]], plot = TRUE, pos = "left")
 shift_legend(p[[3]], plot = TRUE, pos = "left")
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/SFig-7C.rds")
 saveRDS(shift_legend(p[[1]] + theme(plot.title = element_blank()),
@@ -676,7 +653,9 @@ ggplot(subDat, aes(pvalue, fill = method)) +
     scale_fill_manual(values = methodCols)
 ```
 
-### Compare gometh results using different DM CpG significance cutoffs
+#### Compare GOmeth results using different DM CpG significance cutoffs
+
+As the results of GOmeth depend on the list of significant CpGs provided as input to the function, we explored the effect of selecting "significant" CpGs in different ways on the gene set testing performance of GOmeth.
 
 ```{r, fig.width=7, fig.height=8}
 dat %>% filter(set == "KEGG") %>%
@@ -724,12 +703,12 @@ p
 ```
 
 
-## Test BROAD gene sets
+### BROAD gene sets
 
 As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. Using the top 100 ranked gene sets as identified by Belinda's `gsaseq` analysis of the corresponding RNAseq data as "truth".
 
 ```{r}
-rnaseqBROAD <- readRDS(here("data/RNAseq-BROAD-GSA.rds"))
+rnaseqBROAD <- readRDS(here("data/cache-rnaseq/RNAseq-BROAD-GSA.rds"))
 rnaseqBROAD %>% group_by(contrast) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> topBROAD
@@ -763,6 +742,8 @@ p[[2]]
 p[[3]]
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/SFig-8A.rds")
 saveRDS(p[[1]], fig, compress = FALSE)
@@ -773,6 +754,8 @@ saveRDS(p[[2]], fig, compress = FALSE)
 fig <- here("output/figures/SFig-10A.rds")
 saveRDS(p[[3]], fig, compress = FALSE)
 ```
+
+Examine what the top 10 ranked gene sets are and how many genes they contain, for each method and comparison.
 
 ```{r, fig.height=8, fig.width=9}
 data(PathwayList)
@@ -829,6 +812,8 @@ shift_legend(p[[2]], plot = TRUE, pos = "left")
 shift_legend(p[[3]], plot = TRUE, pos = "left")
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/SFig-8B.rds")
 saveRDS(shift_legend(p[[1]] + theme(plot.title = element_blank()),
@@ -861,7 +846,9 @@ ggplot(subDat, aes(pvalue, fill = method)) +
     scale_fill_manual(values = methodCols)
 ```
 
-### Compare gometh results using different DM CpG significance cutoffs
+#### Compare GOmeth results using different DM CpG significance cutoffs
+
+As the results of GOmeth depend on the list of significant CpGs provided as input to the function, we explored the effect of selecting "significant" CpGs in different ways on the gene set testing performance of GOmeth.
 
 ```{r, fig.width=7, fig.height=8}
 dat %>% filter(set == "BROAD") %>%
