--- a/analysis/fdrAnalysis.Rmd
+++ b/analysis/fdrAnalysis.Rmd
@@ -27,9 +27,9 @@ source(here("code/utility.R"))
 
 # Load data
 
-We are using publicly available kidney clear cell carcinoma (KIRC) 450k data from The Cancer Genome Atlas (TCGA). We are using only the normal samples to look at false discovery rate control by various methylation gene set testing methods.
+We are using publicly available kidney clear cell carcinoma (KIRC) 450k data from The Cancer Genome Atlas (TCGA). We are using only the normal samples to look at false discovery rate (FDR) control by various methylation gene set testing methods.
 
-Download the data using the `curatedTCGAData` Bioconductor package and then extract the normal samples. The data seems to have already been normalised(?) so we will only remove poor probes (>1 NA), SNP, multi-mapping and sex-chromosome probes. 
+First, download the data using the `curatedTCGAData` Bioconductor package and then extract the normal samples. The data is provided as β values with masked data points; data points were masked as “NA” if their detection p-value was greater than 0.05 or the probe was annotated as having a SNP within 10 base pairs or repeat within 15 base pairs or the interrogated CpG. We extract only the 160 normal samples.  
 
 ```{r, message=FALSE, warning=FALSE, results='hide'}
 kirc <- curatedTCGAData(diseaseCode = "KIRC", assays = "Methylation_methyl450", 
@@ -44,6 +44,10 @@ meta <- meta[m, ]
 head(meta[, 1:5])
 ```
 
+## Quality control
+
+Removed any probes with >1 NA value.
+
 ```{r}
 betasNoNA <- betas[rowSums(is.na(betas)) == 0, ]
 mds <- plotMDS(betasNoNA, gene.selection = "common", plot = FALSE)
@@ -55,10 +59,14 @@ ggplot(dat, aes(x = x, y = y, colour = gender)) +
        colour = "Sex")
 ```
 
+Remove any remaining SNP-affected probes and multi-mapping and sex-chromosome probes. This leaves 364,602 probes for downstream analysis.
+
 ```{r}
 betasFlt <- rmSNPandCH(betasNoNA, rmXY = TRUE, rmcrosshyb = TRUE)
 dim(betasFlt)
 ```
+
+We no longer observe a sex effect or other structure in the data.
 
 ```{r, message=FALSE}
 mds <- plotMDS(betasFlt, gene.selection = "common", plot = FALSE)
@@ -74,11 +82,14 @@ p <- ggplot(dat, aes(x = x, y = y, colour = gender)) +
 p
 ```
 
+Save figure for use in manuscript.
+
 ```{r}
 fig <- here("output/figures/Fig-3C.rds")
 saveRDS(p, fig, compress = FALSE)
 ```
 
+Colour MDS plot using different variables to explore any further structure in the data.
 
 ```{r, fig.width=8, fig.height=7}
 dat$age <- meta$years_to_birth
@@ -117,17 +128,23 @@ p <- ggplot(dat, aes(x = beta)) +
 p + labs(x = "Beta value", y = "Density")
 ```
 
-# FDR analysis
-
-Run 100 null simulations comparing 5, 10, 20, 40, 80 randomly selected samples per "group". There should be no significant differential methylation between the groups as the data contains no signal. Consequently, we expect about 5% false gene set discoveries across the 100 simulations from methods that are "holding their size". We will compare gometh (with top 1000 and 5000 ranked CpGs selected), MethylGSA:GLM, MethylGSM:ORA, MethylGSA:GSEA and ChAMP:ebGSEA for the complete list of BROAD gene sets provided in the *ChAMP* package. 
+Save the filtered TCGA KIRC data for use in subsequent FDR analysis.
 
 ```{r}
-outFile <- here("data/TCGA.KIRC.rds")
+outFile <- here("data/datasets/TCGA.KIRC.rds")
 
 if(!file.exists(outFile)){
     saveRDS(betasFlt, file = outFile)
 }
 ```
+
+# FDR analysis
+
+We randomly select 5, 10, 20, 40, 80 samples per "group" from the TCGA KIRC normal samples and then perform differential methylation analysis between the two "groups". We do this 100 times for each "group" size. There should be no significant differential methylation between the groups as the data contains no signal. Consequently, we expect about 5% false gene set discoveries across the 100 simulations from methods that are "holding their size". 
+
+We compare GOmeth (with top 1000 and 5000 ranked CpGs from the DM analysis selected as "significant"), methylglm (mGLM), methylRRA-ORA (mRRA (ORA)), methylRRA-GSEA (mRRA (GSEA)) from the *MethylGSA* package and ebayGSEA from the *ChAMP* package. As ebayGSEA can only be run on its in-built BROAD MSigDB gene sets, to be able to compare across ALL methods, we only used the BROAD MSigDB gene sets provided with *ChAMP* package for this analysis.
+
+The code used to produce the simulation results can be found in the `code/fdr-analysis` directory. It consists of three scripts: `genRunFDRAnalysisJob.R`, `runFDRAnalysis.R` and `processFDRAnalysis.R`. The `genRunFDRAnalysisJob.R` script creates and submits [Slurm](https://slurm.schedmd.com/overview.html) job scripts that run the `runFDRAnalysis.R` script, in parallel, on a HPC. Each job executes *one* of the 100 simulations, for a "group" size. The results of each job are saved as an RDS file named `FDR.{sampleNo}.{simNo}.rds` in the `output/FDR-analysis` directory. Once all simulation jobs are complete, the `processFDRAnalysis.R` must be executed to collate the results into a single object, which is then saved as `FDR-analysis.rds` in the `output/FDR-analysis` directory. The intermediate RDS files are moved into `output/FDR-analysis/.bin`, which can then be deleted, if no longer required. The subsequent section requires `FDR-analysis.rds` to be present in the `output/FDR-analysis` directory for downstream analysis and plotting.
 
 Load the results of the FDR simulations.
 
@@ -136,7 +153,7 @@ inFile <- here("output/FDR-analysis/FDR-analysis.rds")
 if(file.exists(inFile)) dat <- as_tibble(readRDS(inFile))
 ```
 
-The plots below shows that MethylGSA-ORA does not control the false discovery rate very well as the median proportion of p-value 0.05 for the 100 simulations is greater than 0.5. MethylGSA-GSEA does better, although its median false discovery rate is still relatively high at around 0.25. MethylGSA-GLM has good false discovery rate control with median FDR at around 0.05. ChAMP-ebGSEA is only slightly anti-conservative using both the wicox test (WT) and known population median test (KPMT) with a median FDR at around 0.06-0.08. MissMethyl-gometh is very consistent although somewhat conservative with a median FDR at around 0.02-0.03. 
+The plots below shows that mRRA (ORA) does not control the FDR very well as the median proportion of p-value 0.05 for the 100 simulations is greater than 0.5. mRRA (GSEA) does better, although its median FDR is still relatively high at around 0.25. mGLM has good FDR control with median FDR at around 0.05. ebayGSEA is only slightly anti-conservative using both the Wilcox test (WT) and Known Population Median test (KPMT) with a median FDR at around 0.06-0.08. GOmeth is very consistent although somewhat conservative with a median FDR at around 0.02-0.03. 
 
 ```{r, fig.width=9}  
 dat %>% mutate(method = unname(dict[method])) %>%
@@ -156,6 +173,8 @@ p <- ggplot(sigDat, aes(x = reorder(sampleNo, sampleOrd), y = psig,
     scale_fill_manual(values = methodCols)
 p
 ```
+
+Save figure for use in manuscript.
 
 ```{r}
 fig <- here("output/figures/Fig-3D.rds")
