--- a/analysis/exploreArrayBiasEPIC.Rmd
+++ b/analysis/exploreArrayBiasEPIC.Rmd
@@ -167,7 +167,7 @@ saveRDS(p, fig, compress = FALSE)
 
 We randomly select 50, 100, 500, 1000, 5000 and 10000 sets of CpGs and perform GO testing on each set 100 times, with and without adjusting for the various biases on the array. 
 
-The code used to produce the simulation results can be found in the `code/random-cpg-sims` directory. It consists of three scripts: `genRandCpgSimJobs.R`, `randomCpgSim.R` and `processRandCpgSim.R`. The `genRandCpgSimJobs.R` script creates and submits [Slurm](https://slurm.schedmd.com/overview.html) job scripts that run the `randomCpgSim.R` script, in parallel, on a HPC. Each job executes *one* of the 100 simulations, for a fixed number of randomly selected CpGs, using either the 450K or EPIC array annotation. The results of each job are saved as an RDS file named `{arrayType}.{noCpgs}.{simNo}.rds` in the `output/random-cpg-sims` directory. Once all simulation jobs are complete, the `processRandCpgSim.R` must be executed to collate the results into a single object for each array type, which are then saved as `450K.rds` and `EPIC.rds` in the `output/random-cpg-sims` directory. The intermediate RDS files are moved into `output/.bin`, which can then be deleted, if no longer required. The subsequent section requires `EPIC.rds` to be present in the `output/random-cpg-sims` directory for downstream analysis and plotting.             
+The code used to produce the simulation results can be found in the `code/random-cpg-sims` directory. It consists of three scripts: `genRandCpgSimJobs.R`, `randomCpgSim.R` and `processRandCpgSim.R`. The `genRandCpgSimJobs.R` script creates and submits [Slurm](https://slurm.schedmd.com/overview.html) job scripts that run the `randomCpgSim.R` script, in parallel, on a HPC. Each job executes *one* of the 100 simulations, for a fixed number of randomly selected CpGs, using either the 450K or EPIC array annotation. The results of each job are saved as an RDS file named `{arrayType}.{noCpgs}.{simNo}.rds` in the `output/random-cpg-sims` directory. Once all simulation jobs are complete, the `processRandCpgSim.R` must be executed to collate the results into a single object for each array type, which are then saved as `450K.rds` and `EPIC.rds` in the `output/random-cpg-sims` directory. The intermediate RDS files are moved into `output/random-cpg-sims/.bin`, which can then be deleted, if no longer required. The subsequent section requires `EPIC.rds` to be present in the `output/random-cpg-sims` directory for downstream analysis and plotting.             
 
 ### Results
 
